<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:summary="@string/main_preference_category_summary"
        android:title="@string/main_preferences_category_title"
        >
        <EditTextPreference
            android:key="fileKeyStorePath"
            android:summary="@string/pref_fileKeyStorePath_summary"
            android:title="@string/pref_fileKeyStorePath_title"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:defaultValue="/system/etc/security/cacerts.bks"
            />
        <EditTextPreference
            android:key="passwordKeyStore"
            android:summary="@string/pref_passwordKeyStore_summary"
            android:title="@string/pref_passwordKeyStore_title"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:defaultValue="changeit"
            />
        <CheckBoxPreference
            android:key="loadKeyStoreFile"
            android:title="Load KeyStore file"
            android:defaultValue="true"
            android:summary="Load KeyStore File from file path"
            />
        <EditTextPreference
            android:key="typeKeyStore"
            android:summary="@string/pref_typeKeyStore_summary"
            android:title="@string/pref_typeKeyStore_title"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:defaultValue="BKS"
            />
    </PreferenceCategory>

</PreferenceScreen>